@@ -7,3 +7,4 @@
 /police_shooting_data/create.sql
 /police_shooting_data/increase_name_column_length.sql
 /police_shooting_data/increase_armed_column_length.sql
+/weekly_evictions/create.sql
